feat: simplify new workflows architecture